# etl_pipeline_and_feature_extraction

./: .gitignore  README.md  pyproject.toml
src/: config.py  etl.py  features.py  main.py
